[gd_scene load_steps=46 format=3 uid="uid://coovnmiomy3xa"]

[ext_resource type="Texture2D" uid="uid://cfcauj2hcs18i" path="res://Sprites/UI/dices/dice1-color.png" id="2_r6pxl"]
[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="2_re0bi"]
[ext_resource type="Texture2D" uid="uid://df67evc00lqj5" path="res://Sprites/UI/dices/dice2-color.png" id="3_p18bu"]
[ext_resource type="Texture2D" uid="uid://c07ntpenu6nrq" path="res://Sprites/UI/dices/dice3-color.png" id="4_rw82i"]
[ext_resource type="Texture2D" uid="uid://7jr2jb08drs7" path="res://Sprites/UI/dices/dice4-color.png" id="5_w0egx"]
[ext_resource type="Texture2D" uid="uid://c2c43v1361tg4" path="res://Sprites/UI/dices/dice5-color.png" id="6_umvos"]
[ext_resource type="Texture2D" uid="uid://7ht5hhio5oa6" path="res://Sprites/UI/dices/dice6-color.png" id="7_4b4iq"]
[ext_resource type="PackedScene" uid="uid://1cgqhoji8gcb" path="res://Scenes/dice.tscn" id="8_72j4t"]
[ext_resource type="Texture2D" uid="uid://bdj0okqe3e2x6" path="res://Sprites/UI/plateau.png" id="9_h45jj"]
[ext_resource type="Texture2D" uid="uid://uwbxqkont7uu" path="res://Sprites/UI/gobelet-hover.png" id="10_6l2kn"]
[ext_resource type="Texture2D" uid="uid://dk3jg0f0ordhe" path="res://Sprites/UI/gobelet.png" id="10_c6ft7"]
[ext_resource type="Theme" uid="uid://dyx21ksbxmx85" path="res://Themes/tooltips.tres" id="11_7mjbh"]
[ext_resource type="Texture2D" uid="uid://cdetu2igyog72" path="res://Animations/shield-upgrade.png" id="13_kqgwy"]
[ext_resource type="Texture2D" uid="uid://c32w4yfhwcaep" path="res://Sprites/UI/tooltips/tooltip-dice.png" id="14_o0cic"]
[ext_resource type="Texture2D" uid="uid://1ho1lprkdpem" path="res://Sprites/UI/HUD/progress_bar.png" id="16_xhnic"]
[ext_resource type="Texture2D" uid="uid://b55p2w18kx46h" path="res://Sprites/UI/HUD/progress_bar_fill.png" id="17_015l5"]
[ext_resource type="Theme" uid="uid://ijvymx3wfk2i" path="res://Themes/UI.tres" id="17_oh6jq"]
[ext_resource type="PackedScene" uid="uid://73ybu1u23xav" path="res://Scenes/UI/settings_menu.tscn" id="17_v553p"]
[ext_resource type="Texture2D" uid="uid://d02wiylsy1qku" path="res://Sprites/UI/HUD/play.png" id="18_50do2"]
[ext_resource type="Texture2D" uid="uid://dyswte0xgq8jp" path="res://Sprites/UI/HUD/pause.png" id="19_g1a76"]
[ext_resource type="Texture2D" uid="uid://cp5d76wfeqgrx" path="res://Sprites/UI/HUD/speed.png" id="20_4t0kd"]
[ext_resource type="Texture2D" uid="uid://drsggjl0ha5n" path="res://Sprites/UI/HUD/speed-toggle.png" id="21_jffsl"]
[ext_resource type="FontFile" uid="uid://cmgfklorvqr48" path="res://Fonts/Timmy-Regular.otf" id="21_r0fq3"]
[ext_resource type="Texture2D" uid="uid://e4y15syreyon" path="res://Sprites/UI/HUD/helpButton.png" id="22_asojs"]
[ext_resource type="PackedScene" uid="uid://sxho2s5b2oq" path="res://Scenes/UI/fireworks/fireworks.tscn" id="23_0j4rl"]
[ext_resource type="PackedScene" uid="uid://bwcochpom2701" path="res://Scenes/UI/statistics.tscn" id="24_kkpkk"]
[ext_resource type="Texture2D" uid="uid://bcwflblflx8cv" path="res://Sprites/UI/menu/help.png" id="25_5kw5x"]

[sub_resource type="Animation" id="Animation_a83cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_76ook"]
resource_name = "shield_sparkle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_gjnha"]
resource_name = "upgrade_shield"
length = 2.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.45, 0.55, 0.65, 0.75, 0.85, 0.95, 1.05, 1.15, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_e8xvp"]
resource_name = "upgrade_shield_no_glow"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sl4t"]
_data = {
"RESET": SubResource("Animation_a83cg"),
"shield_sparkle": SubResource("Animation_76ook"),
"upgrade_shield": SubResource("Animation_gjnha"),
"upgrade_shield_no_glow": SubResource("Animation_e8xvp")
}

[sub_resource type="Texture2D" id="Texture2D_v5van"]
resource_local_to_scene = false
resource_name = ""

[sub_resource type="Animation" id="Animation_vxsyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay/Gobelet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeOverlay:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FadeOverlay:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_t54un"]
resource_name = "fade_overlay"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeOverlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0.470588), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fss2s"]
resource_name = "hide_overlay"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1000, 0)]
}

[sub_resource type="Animation" id="Animation_npus7"]
resource_name = "show_overlay"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay/Gobelet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dibtf"]
_data = {
"RESET": SubResource("Animation_vxsyh"),
"fade_overlay": SubResource("Animation_t54un"),
"hide_overlay": SubResource("Animation_fss2s"),
"show_overlay": SubResource("Animation_npus7")
}

[sub_resource type="Animation" id="Animation_jkdk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartWave:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_h8df7"]
resource_name = "wavestart"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartWave:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.478431), Color(1, 1, 1, 1), Color(1, 1, 1, 0.478431)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8bf7g"]
_data = {
"RESET": SubResource("Animation_jkdk0"),
"wavestart": SubResource("Animation_h8df7")
}

[sub_resource type="Animation" id="Animation_jx8tk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HelpMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(330, 1250)]
}

[sub_resource type="Animation" id="Animation_3bbl5"]
resource_name = "hide_help"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HelpMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(330, 150), Vector2(330, 1250)]
}

[sub_resource type="Animation" id="Animation_nu8vu"]
resource_name = "show_help"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HelpMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(330, 1250), Vector2(330, 150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlamf"]
_data = {
"RESET": SubResource("Animation_jx8tk"),
"hide_help": SubResource("Animation_3bbl5"),
"show_help": SubResource("Animation_nu8vu")
}

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("17_oh6jq")
script = ExtResource("2_re0bi")
dicesSprites = [ExtResource("2_r6pxl"), ExtResource("3_p18bu"), ExtResource("4_rw82i"), ExtResource("5_w0egx"), ExtResource("6_umvos"), ExtResource("7_4b4iq")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ValeurMain" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1075.0
offset_top = 25.0
offset_right = 1400.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 40
text = "Main réelle : "

[node name="Grille" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 81.0
offset_top = 9.0
offset_right = 551.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
text = "Grille"

[node name="Overlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="Plateau" type="TextureRect" parent="CanvasLayer/Overlay"]
offset_left = 102.0
offset_top = 598.0
offset_right = 502.0
offset_bottom = 998.0
texture = ExtResource("9_h45jj")

[node name="DiceHand" type="Control" parent="CanvasLayer/Overlay"]
layout_mode = 3
anchors_preset = 0

[node name="Dice1" parent="CanvasLayer/Overlay/DiceHand" instance=ExtResource("8_72j4t")]
offset_left = 760.0
offset_top = 822.0
offset_right = 820.0
offset_bottom = 882.0

[node name="Dice2" parent="CanvasLayer/Overlay/DiceHand" instance=ExtResource("8_72j4t")]
offset_left = 350.0
offset_top = 760.0
offset_right = 410.0
offset_bottom = 820.0

[node name="Dice3" parent="CanvasLayer/Overlay/DiceHand" instance=ExtResource("8_72j4t")]
offset_left = 215.0
offset_top = 800.0
offset_right = 275.0
offset_bottom = 860.0

[node name="Dice4" parent="CanvasLayer/Overlay/DiceHand" instance=ExtResource("8_72j4t")]
offset_left = 300.0
offset_top = 670.0
offset_right = 360.0
offset_bottom = 730.0

[node name="Dice5" parent="CanvasLayer/Overlay/DiceHand" instance=ExtResource("8_72j4t")]
offset_left = 195.0
offset_top = 700.0
offset_right = 255.0
offset_bottom = 760.0

[node name="Gobelet" type="TextureButton" parent="CanvasLayer/Overlay"]
offset_left = 555.0
offset_top = 812.0
offset_right = 665.0
offset_bottom = 975.0
texture_normal = ExtResource("10_c6ft7")
texture_hover = ExtResource("10_6l2kn")

[node name="Tooltip" type="Control" parent="CanvasLayer/Overlay/Gobelet"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 119.0
offset_top = 42.0
offset_right = 179.0
offset_bottom = 92.0
theme = ExtResource("11_7mjbh")

[node name="bg" type="TextureRect" parent="CanvasLayer/Overlay/Gobelet/Tooltip"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_o0cic")

[node name="nbLancers" type="Label" parent="CanvasLayer/Overlay/Gobelet/Tooltip"]
offset_left = 10.0
offset_top = -6.0
offset_right = 220.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 36
text = "3 lancers restant"

[node name="Health" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 99.0
offset_right = 99.0

[node name="Icon" type="Sprite2D" parent="CanvasLayer/Health"]
position = Vector2(0, 80)
scale = Vector2(5, 5)
texture = ExtResource("13_kqgwy")
hframes = 22
vframes = 2

[node name="Value" type="Label" parent="CanvasLayer/Health"]
offset_left = -26.0
offset_top = 22.0
offset_right = 24.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 66
text = "50"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Health"]
libraries = {
"": SubResource("AnimationLibrary_8sl4t")
}

[node name="Progress" type="TextureProgressBar" parent="CanvasLayer/Health"]
offset_left = -78.0
offset_top = 130.0
offset_right = -30.0
offset_bottom = 178.0
scale = Vector2(3, 3)
max_value = 62.0
texture_under = ExtResource("16_xhnic")
texture_progress = ExtResource("17_015l5")

[node name="ProgressValue" type="Label" parent="CanvasLayer/Health"]
offset_left = -30.0
offset_top = 181.0
offset_right = 16.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 32
text = "0/62"
horizontal_alignment = 1

[node name="PauseOverlay" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(0.337255, 0.337255, 0.337255, 0.482353)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("Texture2D_v5van")

[node name="OverlayAnimation" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_dibtf")
}

[node name="TextAnimation" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_8bf7g")
}

[node name="HelpAnimation" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_rlamf")
}

[node name="StartWave" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -190.0
offset_right = 500.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("21_r0fq3")
theme_override_font_sizes/normal_font_size = 100
text = "Troupes ennemies en approche "
fit_content_height = true

[node name="Vague" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 380.0
offset_top = 15.0
offset_right = 380.0
offset_bottom = 15.0
scale = Vector2(0.8, 0.8)

[node name="number" type="Label" parent="CanvasLayer/Vague"]
offset_left = 1454.0
offset_top = 35.0
offset_right = 1924.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 60
text = "Prochaine vague : 1/13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="remaining" type="Label" parent="CanvasLayer/Vague"]
visible = false
offset_left = 1454.0
offset_top = 80.0
offset_right = 1924.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 50
text = "2 ennemis restant"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="HBoxContainer" parent="CanvasLayer/Vague"]
custom_minimum_size = Vector2(0, 80)
offset_left = 1587.0
offset_top = -3.0
offset_right = 1791.0
offset_bottom = 77.0

[node name="PausePlay" type="TextureButton" parent="CanvasLayer/Vague/Controls"]
process_mode = 3
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 80.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("18_50do2")
texture_pressed = ExtResource("19_g1a76")
ignore_texture_size = true
stretch_mode = 0

[node name="SpeedUp" type="TextureButton" parent="CanvasLayer/Vague/Controls"]
process_mode = 1
custom_minimum_size = Vector2(100, 0)
offset_left = 104.0
offset_right = 204.0
offset_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource("20_4t0kd")
texture_pressed = ExtResource("21_jffsl")
ignore_texture_size = true
stretch_mode = 0

[node name="Pause" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
theme = ExtResource("17_oh6jq")

[node name="Options" type="Button" parent="CanvasLayer/Pause"]
process_mode = 3
visible = false
offset_left = 1599.0
offset_top = 964.0
offset_right = 1749.0
offset_bottom = 1024.0
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Stats" type="Button" parent="CanvasLayer/Pause"]
process_mode = 3
visible = false
offset_left = 1467.0
offset_top = 1014.0
offset_right = 1617.0
offset_bottom = 1074.0
theme_override_font_sizes/font_size = 50
text = "Stats"

[node name="Recommencer" type="Button" parent="CanvasLayer/Pause"]
process_mode = 3
visible = false
offset_left = 1555.0
offset_top = 913.0
offset_right = 1805.0
offset_bottom = 973.0
theme_override_font_sizes/font_size = 50
text = "Recommencer"

[node name="Quitter" type="Button" parent="CanvasLayer/Pause"]
process_mode = 3
visible = false
offset_left = 1723.0
offset_top = 1015.0
offset_right = 1873.0
offset_bottom = 1075.0
theme_override_font_sizes/font_size = 50
text = "Quitter"

[node name="HelpButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 70.0
offset_top = 923.0
offset_right = 170.0
offset_bottom = 1023.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("22_asojs")

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Anim" type="RichTextLabel" parent="CanvasLayer/GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 250.0
offset_right = -520.0
offset_bottom = -530.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("21_r0fq3")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[wave amp=70 freq=5]GAME OVER"
fit_content_height = true

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
offset_left = 550.0
offset_top = 455.0
offset_right = 1350.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 60
text = "Les ennemis ont pris possession de la cité"

[node name="Victory" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Anim" type="RichTextLabel" parent="CanvasLayer/Victory"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 250.0
offset_right = -520.0
offset_bottom = -530.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("21_r0fq3")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[wave amp=50 freq=10]VICTOIRE"
fit_content_height = true

[node name="Label" type="Label" parent="CanvasLayer/Victory"]
offset_left = 571.0
offset_top = 465.0
offset_right = 1371.0
offset_bottom = 565.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("21_r0fq3")
theme_override_font_sizes/font_size = 60
text = "Les reliques ont été protégées !"

[node name="Fireworks" parent="CanvasLayer/Victory" instance=ExtResource("23_0j4rl")]

[node name="Settings" parent="CanvasLayer" instance=ExtResource("17_v553p")]
visible = false

[node name="Statistics" parent="CanvasLayer" instance=ExtResource("24_kkpkk")]
process_mode = 3
visible = false

[node name="HelpMenu" type="TextureRect" parent="CanvasLayer"]
offset_left = 330.0
offset_top = 1250.0
offset_right = 842.0
offset_bottom = 2066.0
texture = ExtResource("25_5kw5x")

[node name="Close" type="Button" parent="CanvasLayer/HelpMenu"]
modulate = Color(1, 1, 1, 0)
offset_left = 423.0
offset_top = 741.0
offset_right = 523.0
offset_bottom = 869.0
scale = Vector2(0.5, 0.5)

[node name="FadeOverlay" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("Texture2D_v5van")

[connection signal="pressed" from="CanvasLayer/HelpButton" to="." method="trigger_help"]
[connection signal="pressed" from="CanvasLayer/HelpMenu/Close" to="." method="trigger_help"]
